# llm-sql-phc-eval

./: README.md  datasets-README.md  main.py  pyproject.toml
nbs/: eda-01.ipynb  eda-02-dv.ipynb  eda-03-dv-blocks.ipynb  eda-04-dv-blocks-conn.ipynb
notes/: dv-blocks-CLAUDE.md
src/llm_sql_phc_eval/: datasets.py
