[project]
name = "llm-sql-phc-eval"
version = "0.1.0"
description = "Exploratory data analysis of the 7 processed datasets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab",
    "pandas",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_sql_phc_eval"]
